--- a/lib/html/help.auction-importer.html
+++ b/lib/html/help.auction-importer.html
@@ -1,4 +1,4 @@
-<p><strong>Auction Import Instructions:</strong></p>
+<h2>Auction Import Instructions:</h2>
 <ol id="item-import-help">
 	<li>Click on the button labeled "Upload CSV" below to open the dialog to select your CSV file. Select your CSV from your computer's harddrive
 	and confirm your upload. After the file has uploaded, feel free to rename the title to some thing you can remember more easily.</li>
@@ -8,7 +8,9 @@
 	<li>Next a preview of your import will load. If everything looks ok, click on "<em>Click here to import this file.</em>" above the preview.
 	<p style="color: #e00"><strong >NOTE:</strong> The import will process the file in batches of 1 items at a time. During the import DO NOT CLOSE YOUR BROWSER and DO NOT EXIT THIS PAGE.</p></li>
 </ol>
-<p><strong>FTP NOTE:</strong> When uploading by FTP, DO NOT change the permissions on the files you upload. In addition, also note that images are not imported for items which already exist in an auction. Therefore, if you wish to add images to an already existing auction item, you will need to manually add those images by editing the auction item under "Items &gt; Items".</p>
+<h3>FTP Note:</h3>
+<p>When uploading by FTP, DO NOT change the permissions on the files you upload. In addition, also note that images are not imported for items which already exist in an auction. Therefore, if you wish to add images to an already existing auction item, you will need to manually add those images by editing the auction item under "Items &gt; Items".</p>
+<h3>Image Naming Note:</h3>
 <p><strong>IMAGE NAMING NOTE:</strong> Images for items should be named according to the following format:
 <code style="font-size: 14px">LOTNO_n.jpg</code>
 <ul>
@@ -16,5 +18,8 @@
 	<li><code style="font-size: 14px">n</code> (<em>number</em>) - image number</li>
 	<li>Examples: 101a_1.jpg, 101a_2.jpg, 101a_3.jpg, 102_1.jpg, 102_2.jpg, etc.</li>
 </ul></p>
-<p><strong>CSV EXPORT NOTE:</strong> When exporting a spreadsheet from Excel, choose "Windows Comma Separated (.csv)" as the file format.</p>
+<h3>CSV Export Note:</h3>
+<p> When exporting a spreadsheet from Excel, choose "Windows Comma Separated (.csv)" as the file format.</p>
 <p><strong>iGavel Online Auctions:</strong> Add a link to any item's corresponding iGavel auction page by adding column called <code>iGavelLotNum</code> (<em>case-sensitive</em>) to your CSV.</p>
+<h3>Removed/NO LOT Items:</h3>
+<p>Adding <code>NO LOT</code> anywhere in the title of an item will set that item to <code>DRAFT</code> status, thereby removing it from public display.</p>
