Adding Bidsquare lotnums to auction import

--- a/lib/html/help.auction-importer.csv-setup.html
+++ b/lib/html/help.auction-importer.csv-setup.html
@@ -1,5 +1,5 @@
 <h3>CSV Setup</h3>
-<p>Setup your CSV with the following columns: <code>LotNum</code>, <code>Title</code>, <code>Description</code>, <code>LowEst</code>, <code>HighEst</code>, <code>Realized</code>, <code>Highlight</code>, <code>Tags</code>, and <code>iGavelLotNum</code>. Here's an example:</p>
+<p>Setup your CSV with the following columns: <code>LotNum</code>, <code>Title</code>, <code>Description</code>, <code>LowEst</code>, <code>HighEst</code>, <code>Realized</code>, <code>Highlight</code>, <code>Tags</code>, <code>iGavelLotNum</code>, and <code>BidsquareLotNum</code>. Here's an example:</p>
 
 <table class="widefat">
 	<thead>
@@ -13,6 +13,7 @@
 			<th>Highlight</th>
 			<th>Tags</th>
 			<th>iGavelLotNum</th>
+			<th>BidsquareLotNum</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -26,6 +27,7 @@
 			<td></td>
 			<td>bronze</td>
 			<td></td>
+			<td></td>
 		</tr>
 		<tr class="alternate">
 			<td>2</td>
@@ -36,6 +38,7 @@
 			<td>20650</td>
 			<td>true</td>
 			<td>chinese,jade</td>
+			<td></td>
 			<td></td>
 		</tr>
 	</tbody>
