Adding Item Categories

--- a/lib/html/help.auction-importer.csv-setup.html
+++ b/lib/html/help.auction-importer.csv-setup.html
@@ -1,5 +1,5 @@
 <h3>CSV Setup</h3>
-<p>Setup your CSV with the following columns: <code>LotNum</code>, <code>Title</code>, <code>Description</code>, <code>LowEst</code>, <code>HighEst</code>, <code>Realized</code>, <code>Highlight</code>, <code>Tags</code>, <code>iGavelLotNum</code>, and <code>BidsquareLotNum</code>. Here's an example:</p>
+<p>Setup your CSV with the following columns: <code>LotNum</code>, <code>Title</code>, <code>Description</code>, <code>LowEst</code>, <code>HighEst</code>, <code>Realized</code>, <code>Highlight</code>, <code>Categories</code>, <code>Tags</code>, <code>iGavelLotNum</code>, and <code>BidsquareLotNum</code>. Here's an example:</p>
 
 <table class="widefat">
 	<thead>
@@ -11,6 +11,7 @@
 			<th>HighEst</th>
 			<th>Realized</th>
 			<th>Highlight</th>
+			<th>Categories</th>
 			<th>Tags</th>
 			<th>iGavelLotNum</th>
 			<th>BidsquareLotNum</th>
@@ -25,7 +26,8 @@
 			<td>600</td>
 			<td>324.50</td>
 			<td></td>
-			<td>bronze</td>
+			<td>Chinese</td>
+			<td>bronze,bottles</td>
 			<td></td>
 			<td></td>
 		</tr>
@@ -37,7 +39,8 @@
 			<td>1100</td>
 			<td>20650</td>
 			<td>true</td>
-			<td>chinese,jade</td>
+			<td>Chinese</td>
+			<td>jade,bronze</td>
 			<td></td>
 			<td></td>
 		</tr>
