Replacing Flare Lightbox with Featherlight

--- a/lib/html/highlights.html
+++ b/lib/html/highlights.html
@@ -14,7 +14,7 @@
     </form>
   </div>
 </div>
-<table class="footable metro-centric-red" data-filter="#search-highlights" data-page-size="4">
+<table class="footable metro-centric-red">
   <colgroup>
     {colgroup_cols}
   </colgroup>
