Adding `display` attribute for `show_search` functionality

--- a/lib/html/highlights.html
+++ b/lib/html/highlights.html
@@ -2,7 +2,7 @@
   <div class="col-sm-9 legend">
     <strong>Legend:</strong> <span class="footable-icon footable-sort-indicator"></span> Click to sort <span class="footable-icon footable-toggle"></span> Click for item description and a link to more photos
   </div>
-  <div class="col-sm-3" style="text-align: right;">
+  <div class="col-sm-3" style="text-align: right; display: {show_search};">
     <form class="form-inline">
       <div class="form-group">
         <label class="sr-only" for="search-highlights">Search:</label>
