--- a/lib/html/help.auction-importer.csv-setup.html
+++ b/lib/html/help.auction-importer.csv-setup.html
@@ -6,6 +6,14 @@
 <li>Builds the <strong>Item Description</strong> by concatenating the item <code>Description</code>, <code>ProvenanceLine</code>, and <code>Condition</code> columns (i.e. <code>`${Description}\n\nPROVENANCE: ${ProvenanceLine}\n\nCONDITION: ${Condition}`</code>).</li>
 </ul>
 
+<p>When updating an auction with Low/High Estimates, Realized Prices, and Highlights, use these column headings:</p>
+<ul>
+	<li>LowEstimate</li>
+	<li>HighEstimate</li>
+	<li>HammerPrice</li>
+	<li>isHighlight</li>
+</ul>
+
 <div style="display: none;">
 
 	<p>Setup your CSV with the following columns: <code>LotNum</code>, <code>Title</code>, <code>Description</code>, <code>LowEst</code>, <code>HighEst</code>, <code>Realized</code>, <code>Highlight</code>, <code>Categories</code>, <code>Tags</code>, <code>iGavelLotNum</code>, <code>BidsquareLotNum</code>, and <code>LiveAuctioneersID</code>. Here's an example:</p>
