Adding `data-filter` attr to highlights table to enable filtering

--- a/lib/html/highlights.html
+++ b/lib/html/highlights.html
@@ -14,7 +14,7 @@
     </form>
   </div>
 </div>
-<table class="footable metro-centric-red">
+<table class="footable metro-centric-red" data-filter="#search-highlights">
   <colgroup>
     {colgroup_cols}
   </colgroup>
