Adding `LotBiddingURL` option for CSV Imports

--- a/lib/html/help.auction-importer.csv-setup.html
+++ b/lib/html/help.auction-importer.csv-setup.html
@@ -6,10 +6,10 @@
 <li>Builds the <strong>Item Description</strong> by concatenating the item <code>Description</code>, <code>ProvenanceLine</code>, and <code>Condition</code> columns (i.e. <code>`${Description}\n\nPROVENANCE: ${ProvenanceLine}\n\nCONDITION: ${Condition}`</code>).</li>
 </ul>
 
-<h4>CSV Columns (revised 01/11/2022)</h4>
+<h4>CSV Columns (revised 06/11/2024)</h4>
 <div>
 	<p><strong>Required columns</strong>: <code>LotNumber</code>, <code>Lead</code>, <code>Description</code>, <code>LowEstimate</code>, <code>HighEstimate</code>, <code>ProvenanceLine</code>, <code>Condition</code>, <code>CategoryName</code> and <code>Tags</code>.</p>
-	<p><em>Optional</em> columns: <code>LiveAuctioneersID</code>, <code>HammerPrice</code>, <code>isHighlight</code>, and <code>iGavelLotNum</code> </p>
+	<p><em>Optional</em> columns: <code>LotBiddingURL</code>, <code>LiveAuctioneersID</code>, <code>HammerPrice</code>, <code>isHighlight</code>, and <code>iGavelLotNum</code> </p>
 	<p>Here's an example:</p>
 
 	<table class="widefat">
